--- a/_data/static_files.yml
+++ b/_data/static_files.yml
@@ -29,6 +29,9 @@
 - path: aha/aha.gif
   modified_time: 1423811738
   extname: ".gif"
+- path: archer/ruse.gif
+  modified_time: 1426196968
+  extname: ".gif"
 - path: arnold/arnold-smile.gif
   modified_time: 1423811738
   extname: ".gif"
@@ -729,7 +732,7 @@
   modified_time: 1423811740
   extname: ".gif"
 - path: futurama/pew-pew.gif
-  modified_time: 1425960178
+  modified_time: 1426196967
   extname: ".gif"
 - path: gangsta/1-50-Cent-Laugh-Off-JAG.gif
   modified_time: 1423811740
