--- a/_data/static_files.yml
+++ b/_data/static_files.yml
@@ -377,6 +377,9 @@
 - path: deal-with-it/money-baller.gif
   modified_time: 1423811739
   extname: ".gif"
+- path: despicable-me/friday.gif
+  modified_time: 1426258072
+  extname: ".gif"
 - path: disgust/disgust-jony-depp.gif
   modified_time: 1423811739
   extname: ".gif"
