--- a/_data/static_files.yml
+++ b/_data/static_files.yml
@@ -29,6 +29,9 @@
 - path: aha/aha.gif
   modified_time: 1423811738
   extname: ".gif"
+- path: animals/smiling-bunny.gif
+  modified_time: 1403554872
+  extname: ".gif"
 - path: archer/ruse.gif
   modified_time: 1426196968
   extname: ".gif"
