--- a/_data/static_files.yml
+++ b/_data/static_files.yml
@@ -1667,6 +1667,9 @@
 - path: web-dev/family-guy-css.gif
   modified_time: 1423811743
   extname: ".gif"
+- path: westwing/giphy.gif
+  modified_time: 1425971538
+  extname: ".gif"
 - path: whatever/alba-whatever.gif
   modified_time: 1423811743
   extname: ".gif"
