--- a/_data/static_files.yml
+++ b/_data/static_files.yml
@@ -1667,7 +1667,7 @@
 - path: web-dev/family-guy-css.gif
   modified_time: 1423811743
   extname: ".gif"
-- path: westwing/giphy.gif
+- path: westwing/you-go-girl.gif
   modified_time: 1425971538
   extname: ".gif"
 - path: whatever/alba-whatever.gif
