cheese lemur and thank you

--- a/_data/static_files.yml
+++ b/_data/static_files.yml
@@ -1391,6 +1391,9 @@
 - path: samuel-l-jackson/hold-on-to-your-butts.gif
   modified_time: 1423811742
   extname: ".gif"
+- path: sarcasm/thank-you.gif
+  modified_time: 1429717291
+  extname: ".gif"
 - path: sarcasm/touched.gif
   modified_time: 1423811742
   extname: ".gif"
@@ -1456,6 +1459,9 @@
   extname: ".gif"
 - path: silly-animals/boston-terrier-meets-ball.gif
   modified_time: 1423811742
+  extname: ".gif"
+- path: silly-animals/cheese-lemur.gif
+  modified_time: 1429717232
   extname: ".gif"
 - path: silly-animals/funny-gif-pandas-falling-tree.gif
   modified_time: 1423811742
