--- a/_data/static_files.yml
+++ b/_data/static_files.yml
@@ -1367,6 +1367,9 @@
 - path: popcorn/troy-popcorn-stare.gif
   modified_time: 1423811742
   extname: ".gif"
+- path: pope/tablecloth.gif
+  modified_time: 1443800433
+  extname: ".gif"
 - path: rage/amy-pohler-rage.gif
   modified_time: 1423811742
   extname: ".gif"
